Version 0.3.1
  - reduced side effects after interrupted metadeconfoundR runs (tmp file removal)
  - bugfix: Qcutoff now correctly used to collect potential confounders from naive associations

Version 0.3.0
  - randomVar argument is now simplified: just supply character vector of metaMat variables to be treated as random effects (e.g. randomVar = c("var1", "var5"))
  - NEW fixedVar argument implemented: same usage as randomVar, but adds fixed effect terms to all models
  - implemented computational speed-up for datasets with large number of metavariables
  - metadeconfoundR is now compatible with Unix AND Windows operation systems
  - fixed a bug that lead to an error when a feature with extremely low number non-NA values was present in featureMat
  - improved error messaging for an error in BuildHeatmap function
  - addition of NEW "rawCount" mode, that runs modelling steps on not normalized/rarefied data by including totalReadCount per sample information into glm/glmer comparisons
    - for naive significance test and effect size calculation, rawCounts will be normalized by dividing by totalReadCount per sample
  - updated implementation of logistic regression mode: test for association of binary features to metavariables by setting "logistic = TRUE"
  - experimental NEW feature: return all computed models alongside normal Metadeconfound() output by setting collectMods = TRUE. WARNING: For now, this only works without utilizing parallel processing in the model building step. Larger datasets might take a lot of time processing.
  - NEW BuildHeatmap() argument "tileBordCol" sets tile border color (Default "black")
  - NEW BuildHeatmap() argument "reOrder" to turn on/of sorting of features and metavariables in the reulsting plot

Version 0.2.8
  - changes in status label names and corresponding plotting behavior
  - reversed default color scheme for effect size plotting (red = low, blue= high)